Update index.html with new content and style

--- a/index.html
+++ b/index.html
@@ -19,8 +19,19 @@
                 <li><a href="#contact">Contact Us</a></li>
             </ul>
         </nav>
-        <div class="banner">
-            <img src="images/background.jpg" alt="Travel Banner" class="banner-image">
+        <div class="slideshow-container">
+            <div class="slide fade">
+                <img src="images/indonesia.jpg" alt="Beautiful scenery of Indonesia" class="banner">
+            </div>
+            <div class="slide fade">
+                <img src="images/bali - Copy.jpg" alt="Stunning view of Bali" class="banner">
+            </div>
+            <div class="slide fade">
+                <img src="images/jogja - Copy.jpg" alt="Cultural landmarks of Yogyakarta" class="banner">
+            </div>
+            <div class="slide fade">
+                <img src="images/lombok - Copy.jpg" alt="Serene landscapes of Lombok" class="banner">
+            </div>
         </div>
     </header>
 
@@ -69,10 +80,10 @@
             <div class="content-box">
                 <h2>Gallery</h2>
                 <div class="gallery-images">
-                    <img src="images/api.jpg" alt="Gallery Image 1">
-                    <img src="images/gunung.jpg" alt="Gallery Image 2">
-                    <img src="images/menjangan.jpg" alt="Gallery Image 3">
-                    <img src="images/WhatsApp Image 2024-07-29 at 22.45.52_5caa9beb.jpg" alt="Gallery Image 4">
+                    <img src="images/api.jpg" alt="Mount Bromo at sunrise">
+                    <img src="images/gunung.jpg" alt="Majestic mountains in Indonesia">
+                    <img src="images/menjangan.jpg" alt="Menjangan Island, Bali">
+                    <img src="images/WhatsApp Image 2024-07-29 at 22.45.52_5caa9beb.jpg" alt="Travel moments">
                 </div>
             </div>
         </section>
